--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 extends layout
-
 block content
-  img(src="/images/logo_big.png")
-  h1= title
-  p Welcome to #{title}
+  section.hero.is-error
+        div.hero-body
+            div.container
+                h1.title Team
+                h2.subtitle Unser kompetentes Entwickler-Team
