--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,9 @@ html
           a.navbar-item(href="/team" class=name === 'team' ? 'active' : undefined).
             Team
 
-          a.navbar-item(href="/contact" class=name === 'contact' ? 'active' : undefined).
-            Contact
+          a.navbar-item(href="/kontakt" class=name === 'contact' ? 'active' : undefined).
+            Kontakt
+
+          a.navbar-item(href="/impressum" class=name === 'impressum' ? 'active' : undefined).
+            Impressum
     block content
