--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,5 @@ block content
   section.hero.is-error
         div.hero-body
             div.container
-                h1.title Team
-                h2.subtitle Unser kompetentes Entwickler-Team
+                h1.title Home
+                h2.subtitle Was ist Sisko?
