--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,8 @@ html
     //Captcha
     script(src='https://www.google.com/recaptcha/api.js')
   secret
-    //All hail illuminati
+    //KEKS
+    <a href="/keks" style="display:none;">&nbsp;</a>
   body
     div.columns.is-centered
       div.column.is-half.is-flex.is-vcentered
