--- a/views/keks.pug
+++ b/views/keks.pug
@@ -9,7 +9,7 @@ html
   body
     <section class="hero is-fullheight video">
         <div class="hero-video">
-            <video playsinline autoplay loop oncanplay="this.play()">
+            <video playsinline autoplay loop controls oncanplay="this.play()">
                 <source src="images/keks.mp4" type="video/mp4">
             </video>
         </div>
