--- a/views/impressum.pug
+++ b/views/impressum.pug
@@ -12,7 +12,7 @@ block content
                 <p>Verantwortliche Stelle im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
                 <br/>
                 <p>Sisko Web Solutions<br/>Matteo Piatti<br/>Mürtschenstrasse 9<br/>8640 Rapperswil</p>
-                <p>E-Mail: matteo.piatti@sisko-solutions.ch<br/>Website: http://sisko-solutions.ch/<br/>Telefon: 079 hett sie gseit </p>
+                <p>E-Mail: matteo.piatti@sisko-solutions.ch<br/>Website: http://sisko-solutions.ch/<br/>Telefon: +41 77 218 74 27 </p>
                 <p>&nbsp;</p>
                 h2.title Allgemeiner Hinweis
                 <p>Gest&uuml;tzt auf Artikel 13 der schweizerischen Bundesverfassung und die datenschutzrechtlichen Bestimmungen des Bundes (Datenschutzgesetz, DSG) hat jede Person Anspruch auf Schutz ihrer Privatsphäre sowie auf Schutz vor Missbrauch ihrer pers&ouml;nlichen Daten. Die Betreiber dieser Seiten nehmen den Schutz Ihrer pers&ouml;nlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
