--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,154 @@ block content
   section.hero.is-error
         div.hero-body
             div.container
-                h1.title Home
+                h1.title Startseite
                 h2.subtitle Was ist Sisko?
+  <section class="section">
+    <div class="container content is-medium">
+      <div class="columns">
+        <div class="column">
+          <h1 class="title">
+            <span class="is-red">Über uns</span>
+          </h1>
+          <p>Sisko Web Solutions ist die kompetente, einfache und billige Lösung für ihren Webauftritt. Wir erstellen Ihnen im Handumdrehen eine Webseite auf neustem Stand der heutigen Technologien und Designstandarts. Wir versprechen nicht nur Funktionalität, sondern auch modernes Design und das alles zu tiefstpreisen.</p>
+          <br/>
+          <h1 class="title">
+            <span class="is-red">Der Name</span>
+          </h1>
+          <p>Sisko ist finnisch für Schwester. Der Name kam davon, dass wir uns gegenseitig "Sisko" gesagt haben anstelle von zum Beispiel Bro, Alter oder sonstigem. Der Name ist dann bei uns hängengeblieben und hatt sich so zum Namen unserer Firma weiterentwickelt.</p>
+        </div>
+        <div data-aos="zoom-in-left" class="column aos-init aos-animate">
+          <div class="box">
+            <article class="media">
+              <div class="media-content">
+                <div class="content has-text-centered">
+                  <span>
+                    <img style="font-size:2.5rem; max-height:50px;" src="/images/favicon.png">
+                  </span>
+                  <h2 class="is-2">Sisko Web Solutions</h2>
+                  <p>Hier eine kleine Auflistung unserer Angebote und Fähigkeiten.</p>
+                  <div class="section">
+                    <h4 class="is-4">Was bieten wir an:</h4>
+                    <div class="tags is-centered">
+                      <span class="tag">Webseiten</span>
+                      <span class="tag">Web Applikationen</span>
+                      <span class="tag">Web Design</span>
+                      <span class="tag">Desktop-Applikationen</span>
+                    </div>
+                  </div>
+                  <div class="section">
+                    <h4 class="is-4">Welche Tools beherrschen wir:</h4>
+                    <div class="tags is-centered">
+                      <span class="tag">JavaScript</span>
+                      <span class="tag">PHP</span>
+                      <span class="tag">NodeJS</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                      <span class="tag">SCSS</span>
+                      <span class="tag">SCSS</span>
+                      <span class="tag">NPM</span>
+                      <span class="tag">JSON</span>
+                      <span class="tag">Git</span>
+                      <span class="tag">Unix</span>
+                      <span class="tag">NGINX</span>
+                      <span class="tag">Apache</span>
+                      <span class="tag">MySQL</span>
+                      <span class="tag">Datenbanken</span>
+                      <span class="tag">Twig</span>
+                      <span class="tag">Jade</span>
+                    </div>
+                  </div>
+                  <div class="section">
+                    <h4 class="is-4">Welche Frameworks benutzen wir:</h4>
+                    <div class="tags is-centered">
+                      <span class="tag">WordPress</span>
+                      <span class="tag">October CMS</span>
+                      <span class="tag">ReactJS</span>
+                      <span class="tag">ExpressJS</span>
+                      <span class="tag">Bulma.io</span>
+                      <span class="tag">Electron</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="work" class="section">
+    <div class="container content is-fullhd is-medium">
+      <div class="columns">
+        <div class="column">
+          <h1 class="title">
+            <span class="shadow is-red">Bisherige arbeiten</span>
+          </h1>
+          <p>Auch wenn Sisko eine relativ neue Entwicklung ist haben wir schon ein paar Arbeiten hinter uns. Hier die wichtigsten paar.</p>
+        </div>
+        <div class="column">
+            <div class="card">
+              <div class="card-image">
+                <figure class="image">
+                  <div style="position:relative;overflow:hidden">
+                    <div style="width:100%;padding-bottom:69.86899563318778%">
+                      <img src="/images/products/piatti.jpg" alt="piatti galerie" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/>
+                    </div>
+                  </div>
+                </figure>
+              </div>
+              <div class="card-content">
+                <div class="content">
+                  <h4>Galerie Gian Franco Piatti</h4>
+                  <p>Die Galerie des Künstlers Gian Franco Piatti. Sie zeigt die Verbindung meherer interessanter Techniken. Bei dieser Galerie wurde NodeJS zusammen mit Datenbanke verwendet um Bilder professionell abspeichern zu können. WIP</p>
+                </div>
+                <div class="tags">
+                  <span class="tag">ExpressJS</span>
+                  <span class="tag">CSS</span>
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">SkeletonCSS</span>
+                  <span class="tag">NodeJS</span>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="card">
+              <div class="card-image">
+                <figure class="image">
+                  <div style="position:relative;overflow:hidden">
+                    <a href="https://github.com/matteo-piatti/aqua" target="_blank">
+                      <div style="width:100%;padding-bottom:69.86899563318778%">
+                        <img src="/images/products/aqua.png" alt="aqua" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/>
+                      </div>
+                    </a>
+                  </div>
+                </figure>
+              </div>
+              <div class="card-content">
+                <div class="content">
+                  <h4>Aqua "Always on top" Browser</h4>
+                  <p>Dieser Browser bleibt immer das oberste Fenster. Ein Open-Source Projekt das daraus inspiriert wurde, dass es kein besseres kostenloses Produkt gab. WIP</p>
+                </div>
+                <div class="tags">
+                  <span class="tag">Electron</span>
+                  <span class="tag">JavaScript</span>
+                  <span class="tag">NodeJS</span>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="section has-text-centered">
+    <div class="container">
+      <h1 class="title">
+        <span class="is-red">Kontaktieren sie uns</span>
+      </h1>
+      <div class="buttons is-centered">
+        <a href="/kontakt" class="button is-red no-border">Kontaktformular</a>
+        <a href="mailto:contact@sisko-solutions.ch" class="button is-red no-border">E-Mail schreiben</a>
+      </div>
+    </div>
+  </section>
