--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,15 @@ html
     link(rel='stylesheet', href='/stylesheets/bulma.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name="viewport" content="width=device-width,initial-scale=1,height=device-height,initial-scale=1")
+    meta(name="viewport" content="height=device-height,initial-scale=1")
+    meta(name="description" content="Billige webseiten erstellen lassen Schweiz")
+    meta(name="keywords" content="Sisko, Web, Solutions, Development, Website, Entwickeln")
+    meta(name="author" content="Sisko Web Solutions")
+    meta(name="copyright" content="Sisko Web Solutions")
+    meta(name="robots" content="INDEX, FOLLOW")
+    meta(name="viewport" content="initial-scale=1, viewport-fit=cover")
+    script(src='/javascripts/main.js')
 
     //Captcha
     script(src='https://www.google.com/recaptcha/api.js')
@@ -15,6 +24,10 @@ html
     div.columns.is-centered
       div.column.is-half.is-flex.is-vcentered
         img.image.logo.is-hcentered(src="/images/logo_big_2.png")
+    a(role="button" class="navbar-burger" data-target="mainNavBar" aria-label="menu" aria-expanded="false")
+      span(aria-hidden="true")
+      span(aria-hidden="true")
+      span(aria-hidden="true")
     nav(class="navbar" role="navigation" aria-label="main navigation")
       div(id="mainNavBar" class="navbar-menu")
         div(class="navbar-start")
