--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 769px) {
  body {
    padding-top: 20px;
@@ -19,6 +23,12 @@ body {
   width: 100%;
   height: 100%;
   max-width: 430px;
+}
+
+@media screen and (max-width: 769px) {
+  .logo {
+    width: 80%;
+  }
 }
 
 .navbar-start {
@@ -108,4 +118,68 @@ a:hover {
 
 .is-thin {
   max-width: 1000px;
+}
+
+.button.no-border {
+  border: none;
+}
+
+span.is-red {
+  box-shadow: inset 0 -6px 0 rgba(255,127,80,.4);
+}
+
+.button.is-red {
+    background-color:rgba(255,127,80,1);
+}
+
+.button.is-red:hover {
+  background-color:rgba(255,127,80,.8);
+}
+
+span.is-green {
+  box-shadow: inset 0 -6px 0 rgba(152,251,152,.4);
+}
+
+.button.is-green {
+    background-color:rgba(152,251,152,1);
+}
+
+.button.is-green:hover {
+  background-color:rgba(152,251,152,.8);
+}
+
+span.is-turquoise {
+  box-shadow: inset 0 -6px 0 rgba(175,238,238,.4);
+}
+
+.button.is-turquoise {
+    background-color:rgba(175,238,238,1);
+}
+
+.button.is-turquoise:hover {
+  background-color:rgba(175,238,238,.8);
+}
+
+span.is-blue {
+  box-shadow: inset 0 -6px 0 rgba(32,156,238,.4);
+}
+
+.button.is-blue {
+    background-color:rgba(32,156,238,1);
+}
+
+.button.is-blue:hover {
+  background-color:rgba(32,156,238,.8);
+}
+
+span.is-yellow {
+  box-shadow: inset 0 -6px 0 rgba(255,221,87,.4);
+}
+
+.button.is-yellow {
+    background-color:rgba(255,221,87,1);
+}
+
+.button.is-yellow:hover {
+  background-color:rgba(255,221,87,.8);
 }
