--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,7 +29,7 @@ html
       span(aria-hidden="true")
       span(aria-hidden="true")
     nav(class="navbar" role="navigation" aria-label="main navigation")
-      div(id="mainNavBar" class="navbar-menu")
+      div(id="mainNavBar" class="navbar-menu content is-medium")
         div(class="navbar-start")
           a.navbar-item(href="/" class=name === 'home' ? 'active' : undefined).
             Home
